{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 267,
  "lineage": "f3dc445a-118c-84b1-a0ec-4de0165f4bfb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet_01",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0778521d914d23bc1",
            "arn": "arn:aws:ec2:us-east-1:705587906269:instance/i-07ad64bf5ad3408ae",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07ad64bf5ad3408ae",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "project-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02276aa55c018c9c8",
            "private_dns": "ip-172-17-1-39.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.17.1.39",
            "public_dns": "ec2-34-204-52-219.compute-1.amazonaws.com",
            "public_ip": "34.204.52.219",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0da40204ba1a5c3b5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06ac195ddb627e2ae",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0481ff0a0c2bae332"
            ]
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.instance_sg",
            "aws_subnet.subnets",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "subnet_02",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0778521d914d23bc1",
            "arn": "arn:aws:ec2:us-east-1:705587906269:instance/i-0bac30d46dc519ab8",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bac30d46dc519ab8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "project-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-091b8ce5605bf4fd6",
            "private_dns": "ip-172-17-2-26.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.17.2.26",
            "public_dns": "ec2-54-86-119-76.compute-1.amazonaws.com",
            "public_ip": "54.86.119.76",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-050669759e0546065",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b83333167228b956",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0481ff0a0c2bae332"
            ]
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.instance_sg",
            "aws_subnet.subnets",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "subnet_03",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0778521d914d23bc1",
            "arn": "arn:aws:ec2:us-east-1:705587906269:instance/i-094217b6b3cb09af2",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-094217b6b3cb09af2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "project-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0cf720ef2d0c0f000",
            "private_dns": "ip-172-17-3-113.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.17.3.113",
            "public_dns": "ec2-3-235-88-54.compute-1.amazonaws.com",
            "public_ip": "3.235.88.54",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bfba9df6df0c349f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bb2229282ad946b2",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0481ff0a0c2bae332"
            ]
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.instance_sg",
            "aws_subnet.subnets",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:705587906269:internet-gateway/igw-0d8391ec41c1f7cb1",
            "id": "igw-0d8391ec41c1f7cb1",
            "owner_id": "705587906269",
            "tags": {
              "Name": "project_igw"
            },
            "tags_all": {
              "Name": "project_igw"
            },
            "vpc_id": "vpc-01d458c189c911610"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:705587906269:loadbalancer/app/project-alb/9d687c41128ecf37",
            "arn_suffix": "app/project-alb/9d687c41128ecf37",
            "desync_mitigation_mode": "defensive",
            "dns_name": "project-alb-1056534814.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:705587906269:loadbalancer/app/project-alb/9d687c41128ecf37",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "project-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-071b5bfd6458e10e6"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06ac195ddb627e2ae"
              },
              {
                "subnet_id": "subnet-0b83333167228b956"
              },
              {
                "subnet_id": "subnet-0bb2229282ad946b2"
              }
            ],
            "subnets": [
              "subnet-06ac195ddb627e2ae",
              "subnet-0b83333167228b956",
              "subnet-0bb2229282ad946b2"
            ],
            "vpc_id": "vpc-01d458c189c911610",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.subnets",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:705587906269:listener/app/project-alb/9d687c41128ecf37/edd43e979a5fcb9c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:705587906269:targetgroup/project-tg/ce2da5758da08393",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:705587906269:listener/app/project-alb/9d687c41128ecf37/edd43e979a5fcb9c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:705587906269:loadbalancer/app/project-alb/9d687c41128ecf37",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.main",
            "aws_security_group.alb_sg",
            "aws_subnet.subnets",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:705587906269:targetgroup/project-tg/ce2da5758da08393",
            "arn_suffix": "targetgroup/project-tg/ce2da5758da08393",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-299",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:705587906269:targetgroup/project-tg/ce2da5758da08393",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "project-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-01d458c189c911610"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet_01",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:705587906269:targetgroup/project-tg/ce2da5758da08393-20230204194114133400000007",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:705587906269:targetgroup/project-tg/ce2da5758da08393",
            "target_id": "i-07ad64bf5ad3408ae"
          },
          "dependencies": [
            "aws_instance.main",
            "aws_lb_target_group.main",
            "aws_security_group.alb_sg",
            "aws_security_group.instance_sg",
            "aws_subnet.subnets",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "subnet_02",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:705587906269:targetgroup/project-tg/ce2da5758da08393-20230204194113559300000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:705587906269:targetgroup/project-tg/ce2da5758da08393",
            "target_id": "i-0bac30d46dc519ab8"
          },
          "dependencies": [
            "aws_instance.main",
            "aws_lb_target_group.main",
            "aws_security_group.alb_sg",
            "aws_security_group.instance_sg",
            "aws_subnet.subnets",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "subnet_03",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:705587906269:targetgroup/project-tg/ce2da5758da08393-20230204194113879200000006",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:705587906269:targetgroup/project-tg/ce2da5758da08393",
            "target_id": "i-094217b6b3cb09af2"
          },
          "dependencies": [
            "aws_instance.main",
            "aws_lb_target_group.main",
            "aws_security_group.alb_sg",
            "aws_security_group.instance_sg",
            "aws_subnet.subnets",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:705587906269:route-table/rtb-07951615f232a01d2",
            "id": "rtb-07951615f232a01d2",
            "owner_id": "705587906269",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d8391ec41c1f7cb1",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "project_rtb"
            },
            "tags_all": {
              "Name": "project_rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-01d458c189c911610"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet_01",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05789d23c3c8f5f1b",
            "route_table_id": "rtb-07951615f232a01d2",
            "subnet_id": "subnet-06ac195ddb627e2ae"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.main",
            "aws_subnet.subnets",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "subnet_02",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0abd2dff803759046",
            "route_table_id": "rtb-07951615f232a01d2",
            "subnet_id": "subnet-0b83333167228b956"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.main",
            "aws_subnet.subnets",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "subnet_03",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06aa625d7ed3a5d5b",
            "route_table_id": "rtb-07951615f232a01d2",
            "subnet_id": "subnet-0bb2229282ad946b2"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.main",
            "aws_subnet.subnets",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:705587906269:security-group/sg-071b5bfd6458e10e6",
            "description": "Allow HTTPS and HTTP inbound traffic for application load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-071b5bfd6458e10e6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "project_alb_sg",
            "name_prefix": "",
            "owner_id": "705587906269",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01d458c189c911610"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:705587906269:security-group/sg-0481ff0a0c2bae332",
            "description": "Allow HTTPS and HTTP inbound traffic for the instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0481ff0a0c2bae332",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-071b5bfd6458e10e6"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-071b5bfd6458e10e6"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "project_instances_sg",
            "name_prefix": "",
            "owner_id": "705587906269",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01d458c189c911610"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet_01",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:705587906269:subnet/subnet-06ac195ddb627e2ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.17.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06ac195ddb627e2ae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "705587906269",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet_01"
            },
            "tags_all": {
              "Name": "subnet_01"
            },
            "vpc_id": "vpc-01d458c189c911610"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "subnet_02",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:705587906269:subnet/subnet-0b83333167228b956",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.17.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b83333167228b956",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "705587906269",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet_02"
            },
            "tags_all": {
              "Name": "subnet_02"
            },
            "vpc_id": "vpc-01d458c189c911610"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "subnet_03",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:705587906269:subnet/subnet-0bb2229282ad946b2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.17.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bb2229282ad946b2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "705587906269",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet_03"
            },
            "tags_all": {
              "Name": "subnet_03"
            },
            "vpc_id": "vpc-01d458c189c911610"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:705587906269:vpc/vpc-01d458c189c911610",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.17.0.0/16",
            "default_network_acl_id": "acl-0b4a8cf06be135447",
            "default_route_table_id": "rtb-02622c4e5fec82ae2",
            "default_security_group_id": "sg-0a96c29b743c250d6",
            "dhcp_options_id": "dopt-0a628f16e64f379af",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01d458c189c911610",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02622c4e5fec82ae2",
            "owner_id": "705587906269",
            "tags": {
              "Name": "project_vpc"
            },
            "tags_all": {
              "Name": "project_vpc"
            }
          }
        }
      ]
    }
  ]
}